--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "sqlite3": "^5.1.6",
     "volar-service-vetur": "^0.0.13",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
